fix: scripts started server isntead of index

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "image-optimizer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/server.ts",
+    "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "build": "npx tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
