--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
