--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
+    "module": "Commonjs",
     "target": "ES2020",
-    "module": "ESNext",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "outDir": "dist",
